--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,12 +6,11 @@ OBJS		= $(SRCS:.cpp=.o)
 
 NAME		=  easyfind
 
-CC			= c++-12 #c++-12
+CC			= c++ #c++-12
 
 RM			= rm -f
 
-CFLAGS		= -Wall -Werror -Wextra -std=c++98 -g  -fsanitize=address
-
+CFLAGS		= -Wall -Werror -Wextra -std=c++98 
 
 all:		${NAME}
 
@@ -21,12 +20,10 @@ all:		${NAME}
 ${NAME}:	$(OBJS)
 			$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
 			
-
 .PHONY:		all clean fclean  re
 
 clean:	
 			$(RM) $(OBJS)
-
 
 fclean:		clean
 			$(RM) $(NAME)
